--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(MyLibraryApp VERSION 1.0.0 LANGUAGES CXX)
+project(App VERSION 1.0.0 LANGUAGES CXX)
 
 find_package(MyLibrary REQUIRED)
 
